// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth/connexion renders code-connexion if email 1`] = `
<DocumentFragment>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
    role="status"
  >
     
  </div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    class="sr-only"
    role="alert"
  >
     
  </div>
  <div
    aria-hidden="true"
    class="pointer-events-none fixed right-0 bottom-0 left-0 z-[10000] flex flex-col gap-2 bg-gray-800 p-3 text-center font-mono text-xs text-white"
  >
    <div
      class="border-b border-blue-400 pb-2"
    >
      <span
        class="font-bold text-blue-100"
      >
        📢 POLITE (queued):
      </span>
      <span
        class="truncate"
      >
        (empty)
      </span>
    </div>
    <div
      class="border-b border-red-400 pb-2"
    >
      <span
        class="font-bold text-red-100"
      >
        � ASSERTIVE (priority):
      </span>
      <span
        class="truncate"
      >
        (empty)
      </span>
    </div>
    <div
      class="grid grid-cols-2"
    >
      <div>
        <span
          class="font-bold text-yellow-100"
        >
          📊 TIMELINE:
        </span>
        empty
      </div>
      <div>
        <span
          class="font-bold text-green-100"
        >
          📋 QUEUE: 
        </span>
        <span>
          0 message(s) waiting
        </span>
      </div>
    </div>
  </div>
  <div
    class="container half"
  >
    <button
      class="fr-btn fr-btn--tertiary fr-btn--sm fr-icon-arrow-left-line fr-btn--icon-left"
      id="fr-button-:r0:"
    >
      Retour
    </button>
    <div
      class="title"
    >
      <h1>
        Entrez le code reçu
      </h1>
      <p
        class="subtitle"
      >
        Un code temporaire à 6 chiffres vous a été envoyé à test@example.com. 
        <a
          class="underline"
          href="/auth"
        >
          Ce n'est pas vous ?
        </a>
      </p>
    </div>
    <form>
      <div
        class="fr-input-group mb-0"
      >
        <label
          class="fr-label"
          for="input-:r1:"
        >
          Code de connexion temporaire
        </label>
        <input
          class="fr-input"
          id="input-:r1:"
          name="code"
          type="text"
          value=""
        />
        <div
          aria-live="polite"
          class="fr-messages-group"
          id="input-:r1:-messages-group"
        />
      </div>
      <button
        class="fr-btn fr-icon-check-line fr-btn--icon-right button mt mb-4"
        id="fr-button-:r2:"
        type="submit"
      >
        Valider
      </button>
      <button
        class="fr-btn fr-btn--tertiary fr-icon-mail-line fr-btn--icon-right button"
        id="fr-button-:r3:"
      >
        Renvoyer le code
      </button>
    </form>
    <div
      class="mb-4 space_top row"
    >
      <div
        class="col"
      >
        <a
          class="fr-btn fr-btn--tertiary button"
          href="https://mail.google.com/mail/u/0/"
          id="fr-button-:r4:"
        >
          <img
            alt=""
            class="me-2"
            data-nimg="1"
            decoding="async"
            height="24"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
            style="color: transparent;"
            width="24"
          />
          Ouvrir Gmail
        </a>
      </div>
      <div
        class="col"
      >
        <a
          class="fr-btn fr-btn--tertiary button"
          href="https://outlook.live.com/mail/0/"
          id="fr-button-:r5:"
        >
          <img
            alt=""
            class="me-2"
            data-nimg="1"
            decoding="async"
            height="24"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
            style="color: transparent;"
            width="24"
          />
          Ouvrir Outlook
        </a>
      </div>
    </div>
    <p
      class="small mt-6 text-center"
    >
      Pensez à vérifiez votre courrier indésirable !
    </p>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;

exports[`auth/connexion renders null if no email 1`] = `
<DocumentFragment>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
    role="status"
  >
     
  </div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    class="sr-only"
    role="alert"
  >
     
  </div>
  <div
    aria-hidden="true"
    class="pointer-events-none fixed right-0 bottom-0 left-0 z-[10000] flex flex-col gap-2 bg-gray-800 p-3 text-center font-mono text-xs text-white"
  >
    <div
      class="border-b border-blue-400 pb-2"
    >
      <span
        class="font-bold text-blue-100"
      >
        📢 POLITE (queued):
      </span>
      <span
        class="truncate"
      >
        (empty)
      </span>
    </div>
    <div
      class="border-b border-red-400 pb-2"
    >
      <span
        class="font-bold text-red-100"
      >
        � ASSERTIVE (priority):
      </span>
      <span
        class="truncate"
      >
        (empty)
      </span>
    </div>
    <div
      class="grid grid-cols-2"
    >
      <div>
        <span
          class="font-bold text-yellow-100"
        >
          📊 TIMELINE:
        </span>
        empty
      </div>
      <div>
        <span
          class="font-bold text-green-100"
        >
          📋 QUEUE: 
        </span>
        <span>
          0 message(s) waiting
        </span>
      </div>
    </div>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;
